--- a/app/src/main/res/layout/activity_costumer_map.xml
+++ b/app/src/main/res/layout/activity_costumer_map.xml
@@ -1,165 +1,429 @@
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.simcoder.uber.CustomerLoginActivity" >
+     >
 
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
+
+
+        <android.support.v7.widget.Toolbar
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:id="@+id/main_toolbar"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:minHeight="?attr/actionBarSize"
+
+            app:theme="@style/ToolbarOverlay"
+            app:popupTheme="@style/PopupOverlay">
+
+
+        </android.support.v7.widget.Toolbar>
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/buttons">-->
+            <!--<Button-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:id="@+id/logout"-->
+                <!--android:textColor="@color/white"-->
+                <!--android:layout_margin="13dp"-->
+                <!--android:background="@drawable/bg_greenreal"-->
+                <!--android:text="logout"/>-->
+            <!--<Button-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:id="@+id/history"-->
+                <!--android:textColor="@color/white"-->
+                <!--android:layout_margin="13dp"-->
+                <!--android:background="@drawable/bg_greenreal"-->
+                <!--android:text="history"/>-->
+            <!--<Button-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_margin="13dp"-->
+
+                <!--android:background="@drawable/bg_greenreal"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:textColor="@color/white"-->
+                <!--android:id="@+id/settings"-->
+                <!--android:text="Settings"/>-->
+        <!--</LinearLayout>-->
+
+        <!--<android.support.v7.widget.CardView-->
+            <!--android:layout_below="@+id/buttons"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="20sp">-->
+            <!--<fragment-->
+                <!--android:id="@+id/place_autocomplete_fragment"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"-->
+                <!--/>-->
+        <!--</android.support.v7.widget.CardView>-->
+    <!--</RelativeLayout>-->
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttons">
-            <Button
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:id="@+id/logout"
-                android:textColor="@color/white"
-                android:layout_margin="13dp"
-                android:background="@drawable/bg_greenreal"
-                android:text="logout"/>
-            <Button
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:id="@+id/history"
-                android:textColor="@color/white"
-                android:layout_margin="13dp"
-                android:background="@drawable/bg_greenreal"
-                android:text="history"/>
-            <Button
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_margin="13dp"
+        android:id="@+id/searchcontainer"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
+        android:visibility="visible">
 
-                android:background="@drawable/bg_greenreal"
-                android:layout_height="30dp"
-                android:textColor="@color/white"
-                android:id="@+id/settings"
-                android:text="Settings"/>
-        </LinearLayout>
-
-        <android.support.v7.widget.CardView
-            android:layout_below="@+id/buttons"
-            android:layout_width="match_parent"
+        <fragment
+            android:id="@+id/startsearch"
+            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_margin="20sp">
-            <fragment
-                android:id="@+id/place_autocomplete_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-                />
-        </android.support.v7.widget.CardView>
+
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="3dp" />
+
+
+
+
+
+
+        <fragment
+            android:id="@+id/stopsearch"
+            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+            android:layout_width="200dp"
+
+            android:layout_height="20dp"
+android:layout_marginBottom="3dp"
+            
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true" />
+
+
     </RelativeLayout>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        android:orientation="vertical">
+
+
+
         <LinearLayout
+            android:id="@+id/driverInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/driverInfo"
             android:layout_gravity="bottom"
-            android:orientation="horizontal"
             android:background="@android:color/white"
+            android:orientation="horizontal"
             android:visibility="gone">
+
             <ImageView
+                android:id="@+id/driverProfileImage"
                 android:layout_width="100sp"
                 android:layout_height="100sp"
-                android:id="@+id/driverProfileImage"
-                android:src="@mipmap/ic_default_user"
-                android:padding="20sp"/>
+                android:padding="20sp"
+                android:src="@mipmap/ic_default_user" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingLeft="40sp">
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:id="@+id/driverName"
-                    android:paddingBottom="10sp"
-                    android:paddingTop="20sp"/>
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="10sp"
+                    android:paddingTop="20sp" />
+
+                <TextView
                     android:id="@+id/driverPhone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:paddingBottom="10sp"
-                    android:paddingTop="20sp"/>
+                    android:paddingTop="20sp" />
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:id="@+id/driverCar"
-                    android:paddingBottom="10sp"
-                    android:paddingTop="20sp"/>
-                <RatingBar
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="10sp"
+                    android:paddingTop="20sp" />
+
+                <RatingBar
                     android:id="@+id/ratingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:numStars="5"
-                    android:stepSize="0.1"/>
+                    android:stepSize="0.1" />
             </LinearLayout>
         </LinearLayout>
-        <LinearLayout
-            android:background="@color/black_overlay"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
 
-            android:layout_height="wrap_content">
-            <RadioGroup
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:background="@drawable/bottom_bit"
+
+            android:orientation="vertical">
+
+
+
+
+
+            <LinearLayout
+
                 android:layout_width="match_parent"
+
                 android:layout_height="wrap_content"
 
-                android:id="@+id/radioGroup"
+
                 android:orientation="horizontal">
-                <RadioButton
-                    android:layout_width="wrap_content"
+
+                <TextView
+                    android:id="@+id/UberX"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Taxi"
-                    android:id="@+id/Taxi"/>
-                <RadioButton
-                    android:layout_width="wrap_content"
+                    android:text="BodaBoda"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+
+
+                    android:textColor="@color/colorBlack" />
+
+                <TextView
+                    android:id="@+id/UberBlack"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+                    android:textAlignment="center"
                     android:text="TukTuk"
-                    android:id="@+id/tuktuk"/>
-                <RadioButton
-                    android:layout_width="wrap_content"
+                    android:textColor="@color/colorBlack"
+                   />
+
+                <TextView
+
+                    android:id="@+id/UberXl"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Boda Boda"
-                    android:id="@+id/boda"/>
-            </RadioGroup>
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorBlack"
+
+                    android:text="Taxi" />
+
+                <TextView
+                    android:id="@+id/carhire"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+
+                    android:textColor="@color/colorBlack"
+                    android:padding="4dp"
+                      android:textAlignment="center"
+                    android:text="Limo" />
+            </LinearLayout>
+
+
+
+
+
+
+            <!--<RadioGroup-->
+                <!--android:id="@+id/radioGroup"-->
+                <!--android:layout_width="match_parent"-->
+
+                <!--android:layout_height="wrap_content"-->
+                <!--android:orientation="horizontal">-->
+
+                <!--<RadioButton-->
+                    <!--android:id="@+id/UberX"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="BodaBoda"-->
+
+                    <!--android:textColor="@color/colorBlack" />-->
+
+                <!--<RadioButton-->
+                    <!--android:id="@+id/UberBlack"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="20dp"-->
+                    <!--android:text="TukTuk"-->
+                    <!--android:textColor="@color/colorBlack"-->
+                    <!--android:textStyle="bold" />-->
+
+                <!--<RadioButton-->
+                    <!--android:id="@+id/UberXl"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="20dp"-->
+
+                    <!--android:text="Taxi" />-->
+
+                <!--<RadioButton-->
+                    <!--android:id="@+id/carhire"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="20dp"-->
+
+                    <!--android:text="Limo" />-->
+            <!--</RadioGroup>-->
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
+<RadioGroup
+    android:id="@+id/radioGroup"
+    android:layout_width="wrap_content"
+    android:layout_marginTop="8dp"
+    android:orientation="horizontal"
+    android:layout_height="wrap_content">
+
+
+
+            <RadioButton
+                android:id="@+id/bike_button"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+
+                android:layout_height="50dp"
+                android:layout_margin="26dp"
+                android:foreground="?attr/selectableItemBackground"
+                android:clickable="true"
+               android:hint="Bike"
+
+                android:layout_centerVertical="true"
+
+                android:background="@drawable/motor_bike_icon" />
+
+    <RadioButton
+        android:id="@+id/tuktuk_button"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:hint="TukTuk"
+        android:layout_margin="26dp"
+        android:layout_centerVertical="true"
+
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:layout_weight="1"
+
+        android:background="@drawable/tuktuk_icon" />
+
+            <RadioButton
+                android:id="@+id/taxi_button"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="50dp"
+                android:layout_margin="26dp"
+                android:hint="Taxi"
+                android:foreground="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:background="@drawable/taxi_icon_m" />
+
+            <RadioButton
+                android:id="@+id/limo_button"
+
+                android:layout_height="50dp"
+                android:layout_margin="26dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:hint="Hire"
+                android:foreground="?attr/selectableItemBackground"
+                android:clickable="true"
+
+                android:background="@drawable/limo_round_small" />
+
+</RadioGroup>
+</LinearLayout>
+            <Button
+                android:id="@+id/request"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="bottom"
+
+                android:background="@drawable/bg_roundblack_modified"
+                android:paddingTop="1dp"
+                android:textSize="8dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:textColor="@color/white"
+                android:visibility="gone"
+                android:text="SET PICKUP LOCATION"
+             />
+
+
+
 
             <Button
-                android:layout_gravity="bottom"
+                android:id="@+id/requestone"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Get a Ride"
+                android:layout_height="18dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="bottom"
+                android:visibility="visible"
+                android:background="@drawable/bg_roundblack_modified"
+                android:paddingTop="1dp"
+                android:textSize="8dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textColor="@color/white"
-                android:padding="5dp"
-                android:layout_margin="5dp"
+                android:text="Book"
+               />
 
-                android:background="@drawable/call"
-                android:id="@+id/request"/>
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 
 
 
 </FrameLayout>
 
+    <android.support.design.widget.NavigationView
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+
+        android:layout_gravity="start"
+        android:id="@+id/nav_view"
+
+        android:fitsSystemWindows="true"
+
+
+        app:menu="@menu/activity_home_drawer" />
+</android.support.v4.widget.DrawerLayout>
