--- a/app/src/main/res/layout/drivernewk.xml
+++ b/app/src/main/res/layout/drivernewk.xml
@@ -1,125 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-
-
-    android:layout_height="match_parent">
-    xmlns:tools="http://schemas.android.com/tools"
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/parento"
     android:layout_height="match_parent"
-
     android:background="@drawable/insta"
     >
+    <ImageView
+        android:id="@+id/success"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        android:padding="4dp"
+        app:srcCompat="@drawable/vovoride" />
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:id="@+id/layoutlogina"
-        android:paddingRight="10dp">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/register_display_name"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp">
+            android:layout_marginTop="90dp"
+
+            android:textColorHint="@color/blacko">
 
 
             <EditText
-                android:id="@+id/firstname"
-                android:layout_width="310dp"
-                android:layout_height="wrap_content"
+                android:id="@+id/username"
 
+                android:layout_width="match_parent"
+
+                android:layout_height="wrap_content"
                 android:background="@drawable/bg_edittext"
                 android:ems="10"
-                android:hint="First Name"
 
-
+                android:hint="Username"
                 android:inputType="textPersonName"
                 android:padding="5dp"
                 android:text=""
                 android:textColor="@color/blacko"
-
-                android:textColorHint="@color/black_overla" />
+                android:textColorHint="@color/blacko" />
 
         </android.support.design.widget.TextInputLayout>
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
         <!-- Email Label -->
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/regiser_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-
-            android:layout_marginTop="230dp">
-
-
-            <EditText
-                android:id="@+id/phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-
-                android:background="@drawable/bg_edittext"
-                android:ems="10"
-                android:hint="Phone Number"
-
-                android:inputType="phone"
-                android:padding="5dp"
-                android:text=""
-                android:textColor="@color/blacko"
-                android:textColorHint="@color/black_overlay" />
-
-        </android.support.design.widget.TextInputLayout>
-
-
-
-
-
-
-
-
-        <android.support.design.widget.TextInputLayout
             android:id="@+id/register_email"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
 
-            android:layout_marginTop="310dp">
+            android:layout_marginTop="150dp"
+            android:layout_marginRight="3dp"
 
+            android:textColorHint="@color/blacko">
 
             <EditText
-                android:id="@+id/numberplate"
+                android:id="@+id/city"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
                 android:background="@drawable/bg_edittext"
-
                 android:ems="10"
-                android:hint="Number Plate"
+                android:hint="Email"
+
                 android:inputType="textPersonName"
                 android:padding="5dp"
                 android:text=""
                 android:textColor="@color/blacko"
-                android:textColorHint="@color/black_overlay" />
+                android:textColorHint="@color/blacko" />
+        </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/phonenum"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="3dp"
+
+        android:textColorHint="@color/blacko">
+
+        <EditText
+            android:id="@+id/number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:background="@drawable/bg_edittext"
+            android:ems="10"
+            android:hint="Phone number"
+
+            android:inputType="textPersonName"
+            android:padding="5dp"
+            android:text=""
+            android:textColor="@color/blacko"
+            android:textColorHint="@color/blacko" />
+    </android.support.design.widget.TextInputLayout>
+
+</LinearLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/car"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="210dp"
+            android:textColorHint="@color/blacko">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_edittext"
+                android:ems="10"
+                android:hint="Car"
+                android:inputType="textPersonName"
+                android:padding="5dp"
+                android:text=""
+                android:textColor="@color/blacko"
+
+                android:textColorHint="@color/blacko" />
 
         </android.support.design.widget.TextInputLayout>
+
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="390dp">
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="178dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <RadioGroup
                 android:id="@+id/radioGroup"
-                android:layout_width="263dp"
+                android:layout_width="347dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+
 
                 android:padding="10dp">
 
@@ -131,7 +162,7 @@
                     android:layout_weight="1"
                     android:text="Bike"
                     android:textColor="@color/white"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
 
 
                 <RadioButton
@@ -141,7 +172,7 @@
                     android:layout_weight="1"
                     android:text="Taxi"
                     android:textColor="@color/white"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
 
                 <RadioButton
                     android:id="@+id/limo"
@@ -150,149 +181,81 @@
                     android:layout_weight="1"
                     android:text="Hire"
                     android:textColor="@color/white"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
 
                 <RadioButton
                     android:id="@+id/tuktuk"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Tuktuk"
+                    android:text="TukTuk"
                     android:textColor="@color/white"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
             </RadioGroup>
-
-
-
-
-
 
 
         </LinearLayout>
 
 
+
+
+
         <!-- Password Label -->
         <android.support.design.widget.TextInputLayout
             android:id="@+id/reg_password"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="@color/blacko"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="470dp">
 
+            android:layout_marginTop="360dp"
+            android:textColorHint="@color/blacko">
 
             <EditText
-                android:id="@+id/phone_auth_code"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:layout_gravity="center_horizontal"
                 android:background="@drawable/bg_edittext"
                 android:ems="10"
-                android:hint="Verification Code"
+                android:hint="Password"
 
-                android:inputType="phone"
+                android:inputType="textPassword"
                 android:padding="5dp"
                 android:text=""
-                android:textColor="@color/blacko" />
+                android:textColor="@color/blacko"
 
+                android:textColorHint="@color/blacko" />
 
         </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/logina"
+            android:id="@+id/login_button"
 
             android:layout_width="match_parent"
             android:layout_height="40.0dip"
 
-            android:layout_above="@+id/loginas"
+            android:layout_above="@+id/logina"
             android:layout_alignParentStart="true"
+
             android:layout_margin="10dp"
-
             android:layout_marginBottom="58dp"
-            android:background="@drawable/bg_green"
 
 
+            android:background="@drawable/bg_white"
             android:paddingLeft="90.0dip"
             android:paddingRight="90.0dip"
             android:text="SIGN UP"
-            android:textColor="#ffffffff"
-            android:visibility="gone" />
+            android:textColor="@color/blacko" />
 
         <Button
-            android:id="@+id/loginas"
+            android:id="@+id/logina"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:background="@android:color/transparent"
             android:text="Login"
             android:textColor="@color/white"
-            android:textStyle="bold"
-            android:visibility="invisible" />
-
-        <ImageView
-            android:id="@+id/success"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="44dp"
-            app:srcCompat="@drawable/vovoride" />
+            android:textStyle="bold" />
 
 
-
-        <TextView
-            android:id="@+id/timertv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/reg_password"
-            android:layout_alignEnd="@+id/register_email"
-            android:text=""
-            android:textColor="@color/blacko" />
-
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/register_display_name">
-
-            <EditText
-                android:id="@+id/secondname"
-                android:layout_width="310dp"
-                android:layout_height="wrap_content"
-
-                android:background="@drawable/bg_edittext"
-                android:ems="10"
-                android:hint="Second Name"
-
-
-                android:inputType="textPersonName"
-                android:padding="5dp"
-                android:text=""
-                android:textColor="@color/blacko"
-
-                android:textColorHint="@color/black_overlay" />
-
-
-        </android.support.design.widget.TextInputLayout>
-
-        <ImageView
-            android:id="@+id/send_code"
-            android:layout_width="60dp"
-            android:layout_marginTop="450dp"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-
-            android:layout_marginBottom="103dp"
-            android:tag="@string/tag_send"
-            app:srcCompat="@android:drawable/ic_menu_rotate" />
     </RelativeLayout>
 
-
 </RelativeLayout>
-
-
-</ScrollView>
