--- a/app/src/main/res/layout/activity_costumer_map.xml
+++ b/app/src/main/res/layout/activity_costumer_map.xml
@@ -90,15 +90,15 @@
         android:id="@+id/searchcontainer"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:background="@color/white"
         android:visibility="visible">
 
         <fragment
             android:id="@+id/startsearch"
             android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="226dp"
+            android:layout_height="77dp"
 
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
@@ -324,6 +324,8 @@ android:layout_marginBottom="3dp"
                 android:clickable="true"
                android:hint="Bike"
 
+                android:textColorHint="@color/transpa_overlay"
+
                 android:layout_centerVertical="true"
 
                 android:background="@drawable/motor_bike_icon" />
@@ -333,6 +335,7 @@ android:layout_marginBottom="3dp"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:hint="TukTuk"
+        android:textColorHint="@color/transpa_overlay"
         android:layout_margin="26dp"
         android:layout_centerVertical="true"
 
@@ -348,6 +351,7 @@ android:layout_marginBottom="3dp"
                 android:layout_weight="1"
                 android:layout_height="50dp"
                 android:layout_margin="26dp"
+                android:textColorHint="@color/transpa_overlay"
                 android:hint="Taxi"
                 android:foreground="?attr/selectableItemBackground"
                 android:clickable="true"
@@ -358,6 +362,7 @@ android:layout_marginBottom="3dp"
 
                 android:layout_height="50dp"
                 android:layout_margin="26dp"
+                android:textColorHint="@color/transpa_overlay"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:hint="Hire"
