--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,9 @@
 
             android:layout_height="45dp"
             android:layout_alignParentBottom="true"
+            android:clickable="true"
+
+            android:foreground="?attr/selectableItemBackground"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="84dp"
 
@@ -44,6 +47,9 @@
 
             android:layout_width="match_parent"
             android:layout_height="45dp"
+            android:clickable="true"
+
+            android:foreground="?attr/selectableItemBackground"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="11dp"
