--- a/app/src/main/res/layout/driver_map.xml
+++ b/app/src/main/res/layout/driver_map.xml
@@ -1,9 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+android:paddingTop="30dp"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
+
+
+
+
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MapActivity" >
+
+
 
     <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
         android:id="@+id/map"
@@ -17,147 +34,233 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <Button
-            android:id="@+id/logout"
-            android:layout_width="70dp"
-            android:layout_height="30dp"
-            android:background="@drawable/bg_green"
-            android:layout_margin="3dp"
-            android:textColor="@color/white"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="Log Out" />
-
-        <Button
-            android:id="@+id/start"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="73dp"
-            android:text="Start"
-
-            android:background="@drawable/bg_greenreal"
-
-            android:textColor="@color/white"/>
-
-        <Button
-            android:id="@+id/pause"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/start"
-            android:layout_marginTop="117dp"
-
-            android:background="@drawable/bg_greenreal"
-            android:text="pause"
-
-            android:textColor="@color/white" />
-        <Button
-            android:id="@+id/stop"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/pause"
-            android:layout_marginTop="161dp"
-            android:background="@drawable/bg_greenreal"
-            android:text="Stop"
-
-            android:textColor="@color/white" />
-
-
-
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_marginTop="60dp"
+            android:layout_height="100dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
 
 
 
-            <Button
-                android:id="@+id/history"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_margin="3dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_greenreal"
-                android:text="history"
-
-                android:textColor="@color/white" />
-
-            <Button
-                android:id="@+id/settings"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_margin="3dp"
-                android:layout_weight="1"
-
-                android:background="@drawable/bg_greenreal"
-                android:text="Settings"
-                android:textColor="@color/white" />
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_whitetrans">
 
 
+                <Button
+                    android:id="@+id/start"
+                    android:layout_width="60dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="16dp"
 
 
-        </LinearLayout>
-        <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/bg_greenreal"
+                    android:text="Start"
+
+                    android:textColor="@color/white"
+
+                    android:textSize="10dp" />
+
+                <Button
+                    android:id="@+id/pause"
+                    android:layout_width="60dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignStart="@+id/start"
+                    android:layout_marginTop="35dp"
+                    android:background="@drawable/bg_greenreal"
+
+                    android:text="pause"
+                    android:textColor="@color/white"
+
+                    android:textSize="10dp" />
+
+                <Button
+                    android:id="@+id/stop"
+                    android:layout_width="60dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignStart="@+id/pause"
+                    android:layout_marginTop="60dp"
+                    android:background="@drawable/bg_greenreal"
+                    android:text="Stop"
+                    android:textColor="@color/white"
+
+                    android:textSize="10dp" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:id="@+id/distancetext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginEnd="16dp"
+                        android:layout_weight="1"
+                        android:text="Cost"
+                        android:textColor="@color/linkedin"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/speedtext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginEnd="16dp"
+                        android:layout_weight="1"
+                        android:text="Speed"
+                        android:textColor="@color/linkedin"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/timetext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginEnd="16dp"
+                        android:layout_weight="1"
+                        android:text="Time"
+                        android:textColor="@color/linkedin"
+                        android:textStyle="bold" />
+
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
+
+
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:minHeight="?attr/actionBarSize"
+
+            app:popupTheme="@style/PopupOverlay"
+            android:layout_marginBottom="20dp"
+            app:theme="@style/ToolbarOverlay">
+
+
+        </android.support.v7.widget.Toolbar>
+
+
+        <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+
+        <!--<Button-->
+        <!--android:id="@+id/history"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:layout_margin="3dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:background="@drawable/bg_greenreal"-->
+        <!--android:text="history"-->
+
+        <!--android:textColor="@color/white" />-->
+
+        <!--<Button-->
+        <!--android:id="@+id/settings"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:layout_margin="3dp"-->
+        <!--android:layout_weight="1"-->
+
+        <!--android:background="@drawable/bg_greenreal"-->
+        <!--android:text="Settings"-->
+        <!--android:textColor="@color/white" />-->
+
+
+        <!--</LinearLayout>-->
+        <LinearLayout
             android:id="@+id/customerInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="270dp"
+
+            android:elevation="10dp"
+            android:background="@color/white_overla"
+
             android:orientation="vertical"
-            android:visibility="gone"
+            android:translationZ="1dp"
+            android:visibility="gone">
 
-           android:layout_marginTop="270dp"
-
-            android:elevation="1dp"
-            android:translationZ="1dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/black_overlay"
-                android:visibility="invisible"
+
+
                 android:orientation="horizontal">
+
                 <ImageView
+                    android:id="@+id/customerProfileImage"
                     android:layout_width="100sp"
                     android:layout_height="100sp"
-                    android:id="@+id/customerProfileImage"
-                    android:src="@mipmap/ic_default_user"
-                    android:padding="20sp"/>
+                    android:padding="20sp"
+                    android:src="@mipmap/ic_default_user" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingLeft="40sp">
+
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
                         android:id="@+id/customerDestination"
-                        android:paddingBottom="10sp"
-                        android:text="Destination: --"/>
-                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingBottom="10sp"
+                        android:text="Destination: --" />
+
+                    <TextView
                         android:id="@+id/customerName"
-                        android:paddingBottom="10sp"
-                        android:paddingTop="20sp"/>
-                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/customerPhone"
                         android:paddingBottom="10sp"
-                        android:paddingTop="20sp"/>
+                        android:paddingTop="20sp" />
+
+                    <TextView
+                        android:id="@+id/customerPhone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="10sp"
+                        android:paddingTop="20sp" />
                 </LinearLayout>
             </LinearLayout>
+
             <Button
+                android:id="@+id/rideStatus"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="picked customer"
-                android:textColor="@color/white"
+                android:layout_height="30dp"
                 android:background="@drawable/bg_green"
-                android:id="@+id/rideStatus"/>
+                android:text="picked customer"
+                android:textColor="@color/white" />
 
 
         </LinearLayout>
@@ -168,56 +271,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="143dp"
             android:layout_margin="10sp"
+            android:layout_marginBottom="143dp"
             android:text="Working" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="12dp"
-            android:layout_marginTop="61dp"
-            android:padding="20dp">
 
-            <TextView
-                android:id="@+id/distancetext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-
-                android:layout_marginTop="19dp"
-                android:text="Cost"
-                android:textColor="@color/blacko"
-                android:textStyle="bold"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/speedtext"
-                android:layout_width="wrap_content"
-
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="Speed"
-                android:textColor="@color/blacko"
-                android:textStyle="bold"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/timetext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="26dp"
-                android:text="Time"
-                android:textColor="@color/blacko"
-                android:textStyle="bold"
-                android:textSize="20sp" />
-        </RelativeLayout>
 
 
     </RelativeLayout>
@@ -226,3 +284,20 @@
 
 
 </FrameLayout>
+
+
+
+
+
+    <android.support.design.widget.NavigationView
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+
+        android:layout_gravity="start"
+        android:id="@+id/nav_view"
+
+        android:fitsSystemWindows="true"
+
+
+        app:menu="@menu/activity_home_drawerdriver" />
+</android.support.v4.widget.DrawerLayout>
