Update on Passenger map activity
Signed-off-by: Bill Israel <bisrael88@gmail.com>

--- a/app/src/main/res/layout/activity_costumer_map.xml
+++ b/app/src/main/res/layout/activity_costumer_map.xml
@@ -477,7 +477,7 @@ android:padding="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:textColor="@color/blacko"
-                android:text="Book"
+                android:text="Vovo Ride"
                />
 
         </RelativeLayout>
