--- a/app/src/main/res/layout/customlayout.xml
+++ b/app/src/main/res/layout/customlayout.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="240dp"
+    android:layout_height="70dp"
     android:padding="20dp"
     android:orientation="vertical"
-    android:background="@color/linkedin">
+    android:background="@drawable/bg_marker">
 
     <LinearLayout
         android:layout_alignParentRight="true"
-        android:layout_width="250dp"
+        android:layout_width="100dp"
         android:layout_height="100dp"
         android:orientation="horizontal">
 
     <TextView
         android:id="@+id/location"
         android:layout_weight="1"
-        android:textColor="@color/blacko"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:paddingBottom="5dp"
         android:layout_width="0dp"
+        android:text="cost"
+        android:textSize="10dp"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/population"
-        android:textColor="@color/blacko"
+        android:textColor="@color/white"
         android:layout_width="0dp"
         android:layout_weight="0.5"
+        android:paddingBottom="5dp"
+        android:text="time"
+        android:textSize="10dp"
         android:layout_height="wrap_content" />
     </LinearLayout>
 
