--- a/app/src/main/res/drawable/bg_whitewhite.xml
+++ b/app/src/main/res/drawable/bg_whitewhite.xml
@@ -2,10 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/vk"/>
-            <stroke android:color="@color/vk" android:width="0dp" />
+
+            <solid android:color="@color/white"/>
+            <stroke android:color="@color/white" android:width="0dp" />
             <!--corners allow us to make the rounded corners button-->
-            <corners android:radius="15dp" />
+            <corners android:radius="35dp" />
         </shape>
     </item>
 </selector>
